feat: change author

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.1",
   "description": "A Quasar Project",
   "productName": "Quasar Sample Web",
-  "author": "inouchi <inouchi0603@gmail.com>",
+  "author": "Masataka Inouchi",
   "private": true,
   "scripts": {
     "lint": "eslint --ext .js,.vue ./",
